@startuml
title ERD - Manga Creation Workflow and Publishing Management System

skinparam linetype ortho
skinparam ranksep 60
skinparam nodesep 50
skinparam titleFontSize 24

entity roles {
  *role_id : int <<PK>>
  --
  role_name : varchar
  description : varchar
  created_at : timestamp
}

entity users {
  *user_id : int <<PK>>
  --
  role_id : int <<FK>>
  username : varchar
  full_name : varchar
  email : varchar
  password_hash : varchar
  status : enum
  is_head_board : tinyint
  created_at : timestamp
  updated_at : timestamp
}

entity series {
  *series_id : int <<PK>>
  --
  mangaka_id : int <<FK>>
  editor_id : int <<FK>> <<NULL>>
  title : varchar
  description : text
  status : enum
  publish_type : varchar
  cover_image : varchar
  proposal_file : varchar
  dossier_notes : text
  created_at : timestamp
  updated_at : timestamp
}

entity chapters {
  *chapter_id : int <<PK>>
  --
  series_id : int <<FK>>
  chapter_number : int
  title : varchar
  status : enum
  due_date : datetime
  published_at : datetime
  is_final : tinyint
  created_at : timestamp
  updated_at : timestamp
}

entity page_regions {
  *region_id : int <<PK>>
  --
  page_id : int <<FK>>
  region_type : enum
  x : int
  y : int
  width : int
  height : int
  status : enum
  created_at : timestamp
}

entity pages {
  *page_id : int <<PK>>
  --
  chapter_id : int <<FK>>
  page_number : int
  image_url : varchar
  old_image_url : varchar <<NULL>>
  status : enum
  created_at : timestamp
  updated_at : timestamp
}

entity tasks {
  *task_id : int <<PK>>
  --
  page_id : int <<FK>>
  page_region_id : int <<FK>> <<NULL>>
  grouped_region_ids : varchar <<NULL>>
  mangaka_id : int <<FK>>
  assistant_id : int <<FK>>
  title : varchar
  task_type : enum
  description : text
  resource_url : varchar
  priority : enum
  status : enum
  due_date : datetime
  created_at : timestamp
  updated_at : timestamp
}

entity submissions {
  *submission_id : int <<PK>>
  --
  user_id : int <<FK>>
  task_id : int <<FK>> <<NULL>>
  chapter_id : int <<FK>> <<NULL>>
  file_url : varchar
  notes : text
  status : enum
  submitted_at : timestamp
  updated_at : timestamp
}

entity reviews {
  *review_id : int <<PK>>
  --
  submission_id : int <<FK>>
  reviewer_id : int <<FK>>
  comments : text
  rating : int
  created_at : timestamp
}

entity series_rankings {
  *ranking_id : int <<PK>>
  --
  series_id : int <<FK>>
  board_member_id : int <<FK>>
  rank_position : int
  score : decimal
  votes : int
  period_start_date : date
  created_at : timestamp
}

entity notifications {
  *notification_id : int <<PK>>
  --
  user_id : int <<FK>>
  related_id : int <<FK>> <<NULL>>
  type : varchar
  message : text
  is_read : boolean
  created_at : timestamp
}

entity system_logs {
  *log_id : int <<PK>>
  --
  user_id : int <<FK>> <<NULL>>
  action : varchar
  details : text
  ip_address : varchar
  created_at : timestamp
}

entity editor_annotations {
  *annotation_id : int <<PK>>
  --
  page_id : int <<FK>>
  editor_id : int <<FK>>
  x : int
  y : int
  width : int
  height : int
  comments : text
  created_at : timestamp
}

entity board_votes {
  *vote_id : int <<PK>>
  --
  series_id : int <<FK>>
  board_member_id : int <<FK>>
  vote : enum
  created_at : timestamp
}

roles ||--o{ users : has
users ||--o{ system_logs : triggers

users ||--o{ series : creates
users ||--o{ series : manages

users ||--o{ tasks : assigns
users ||--o{ tasks : receives

users ||--o{ submissions : submits
users ||--o{ reviews : writes
users ||--o{ notifications : receives
users ||--o{ series_rankings : evaluates
users ||--o{ editor_annotations : annotates
users ||--o{ board_votes : votes

series ||--o{ chapters : contains
series ||--o{ series_rankings : ranked
series ||--o{ board_votes : receives_votes

chapters ||--o{ pages : contains
chapters ||--o{ submissions : submitted

pages ||--o{ page_regions : segment
pages ||--o{ tasks : requires
pages ||--o{ editor_annotations : has
page_regions ||--o{ tasks : targetedAt
tasks ||--o{ submissions : generates

submissions ||--o{ reviews : receives

@enduml
